tests/paczka1/small_fuzzy/37551754.err
Error in line 6: VdPMduPLR S149 59,7
Error in line 3: 7iP5LdfhYv A457 8,4
